# ParserOpenFlight

./: CMakeLists.txt  README.md
ParserOpenFlight/: Main.cpp  ParserOpenFlight.vcxproj  ParserOpenFlight.vcxproj.filters
ParserOpenFlight/include/: OpenFlightRecords.hpp  ParserOpenFlight.hpp
ParserOpenFlight/src/: ParserOpenFlight.cpp
